--- a/src/components/ComponentsStyles.css
+++ b/src/components/ComponentsStyles.css
@@ -14,18 +14,17 @@
 }
 
 /* MORE INFO  */
+.margin-info {
+    margin-top: 20px;
+}
+
 .info {
-    margin-top: 30px;
+    padding: 5px;
     background-color: rgba(8, 147, 247, 0.5);
     border: solid 5px #325288;
     border-radius: 10px;
 }
 
-.row {
-    display: flex;
-
-}
-
-.info-box {
-    margin: 5px
+.info-title {
+    margin: 0;
 }
