--- a/src/components/ComponentsStyles.css
+++ b/src/components/ComponentsStyles.css
@@ -9,36 +9,45 @@
 }
 
 .icon {
-    margin: 8px;
     width: 110px;
     height: 110px;
 }
 
-.title-location {
-    margin: 0;
-}
-
-/* MORE INFO  */
-.margin-info {
-    margin-top: 20px;
-}
-
+/* MORE INFO */
 .info {
-    padding: 5px;
+    margin-top: 20px;
+    display: flex;
     background-color: rgba(8, 147, 247, 0.3);
     border: solid 5px #325288;
     border-radius: 10px;
 }
 
 .info-box {
-    
-}
-
-.border-info-box {
-    border-right: solid 3px #325288;
-    border-left: solid 3px #325288;
+    margin: 5px 7px;
+    width: 95px;
+    display: flex;
+    flex-direction: column;
 }
 
 .info-title {
     margin: 5px 0;
+    color: #325288;
+}
+
+/* HELPERS */
+.icon-weather {
+    font-size: 20px;
+    margin-right: 5px;
+}
+
+.icon-termo {
+    margin-right: 7px;
+}
+
+.dimension-color {
+    color: #eeebdd;
+}
+
+.location-color {
+    color: #325288;
 }
