--- a/src/components/ComponentsStyles.css
+++ b/src/components/ComponentsStyles.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     background-color: rgba(8, 147, 247, 0.3);
-    border: solid 5px #325288;
+    border: solid 5px #132c33;
     border-radius: 20px;
 }
 
@@ -18,7 +18,7 @@
     margin-top: 20px;
     display: flex;
     background-color: rgba(8, 147, 247, 0.3);
-    border: solid 5px #325288;
+    border: solid 5px #132c33;
     border-radius: 10px;
 }
 
@@ -31,7 +31,7 @@
 
 .info-title {
     margin: 5px 0;
-    color: #325288;
+    color: #132c33;
 }
 
 /* HELPERS */
@@ -49,5 +49,5 @@
 }
 
 .location-color {
-    color: #325288;
+    color: #132c33;
 }
